// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should render with icon and checked 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "#fafafa",
              "borderColor": "#ededed",
              "borderRadius": 3,
              "borderWidth": 1,
              "margin": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "padding": 10,
            },
            Object {
              "backgroundColor": "red",
            },
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
                false,
              ]
        }
    >
        <Icon
            allowFontScaling={false}
            color="#bfbfbf"
            name="square-o"
            onLongPress={undefined}
            onPress={undefined}
            size={24}
        />
        <TextElement
            style={
                Array [
                    Object {
                      "color": "#43484d",
                      "fontWeight": "bold",
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                    undefined,
                  ]
            }
        />
    </View>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "#fafafa",
                    "borderColor": "#ededed",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "margin": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                    "padding": 10,
                  },
                  Object {
                    "backgroundColor": "red",
                  },
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        false,
                        false,
                      ]
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="#bfbfbf"
                  name="square-o"
                  onLongPress={undefined}
                  onPress={undefined}
                  size={24}
            />
            <TextElement
                  style={
                        Array [
                              Object {
                                "color": "#43484d",
                                "fontWeight": "bold",
                                "marginLeft": 10,
                                "marginRight": 10,
                              },
                              undefined,
                              undefined,
                            ]
                  }
            />
      </View>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CheckBox
        center={false}
        checked={false}
        checkedColor="red"
        checkedIcon="check-square-o"
        containerStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        iconRight={false}
        iconType="font-awesome"
        right={false}
        uncheckedColor="#bfbfbf"
        uncheckedIcon="square-o"
/>,
      "_debugID": 9,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "center": false,
          "checked": false,
          "checkedColor": "red",
          "checkedIcon": "check-square-o",
          "containerStyle": Object {
            "backgroundColor": "red",
          },
          "iconRight": false,
          "iconType": "font-awesome",
          "right": false,
          "uncheckedColor": "#bfbfbf",
          "uncheckedIcon": "square-o",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        false,
                                      ]
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#bfbfbf"
                              name="square-o"
                              onLongPress={undefined}
                              onPress={undefined}
                              size={24}
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</TouchableOpacity>,
        "_debugID": 10,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        false,
                                      ]
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#bfbfbf"
                              name="square-o"
                              onLongPress={undefined}
                              onPress={undefined}
                              size={24}
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CheckBox
    center={false}
    checked={false}
    checkedColor="red"
    checkedIcon="check-square-o"
    containerStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    iconRight={false}
    iconType="font-awesome"
    right={false}
    uncheckedColor="#bfbfbf"
    uncheckedIcon="square-o"
/>,
}
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "#fafafa",
              "borderColor": "#ededed",
              "borderRadius": 3,
              "borderWidth": 1,
              "margin": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "padding": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
                Object {
                  "justifyContent": "center",
                },
              ]
        }
    >
        <TextElement
            style={
                Array [
                    Object {
                      "color": "#43484d",
                      "fontWeight": "bold",
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                    undefined,
                  ]
            }
        />
        <Icon
            allowFontScaling={false}
            color="blue"
            name="square-o"
            size={24}
        />
    </View>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "#fafafa",
                    "borderColor": "#ededed",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "margin": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                    "padding": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        false,
                        Object {
                          "justifyContent": "center",
                        },
                      ]
            }
      >
            <TextElement
                  style={
                        Array [
                              Object {
                                "color": "#43484d",
                                "fontWeight": "bold",
                                "marginLeft": 10,
                                "marginRight": 10,
                              },
                              undefined,
                              undefined,
                            ]
                  }
            />
            <Icon
                  allowFontScaling={false}
                  color="blue"
                  name="square-o"
                  size={24}
            />
      </View>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CheckBox
        center={true}
        checked={false}
        checkedColor="green"
        checkedIcon="check-square-o"
        iconRight={true}
        iconType="font-awesome"
        right={false}
        rigth={true}
        uncheckedColor="blue"
        uncheckedIcon="square-o"
/>,
      "_debugID": 11,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "center": true,
          "checked": false,
          "checkedColor": "green",
          "checkedIcon": "check-square-o",
          "iconRight": true,
          "iconType": "font-awesome",
          "right": false,
          "rigth": true,
          "uncheckedColor": "blue",
          "uncheckedIcon": "square-o",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        Object {
                                          "justifyContent": "center",
                                        },
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
                    <Icon
                              allowFontScaling={false}
                              color="blue"
                              name="square-o"
                              size={24}
                    />
          </View>
</TouchableOpacity>,
        "_debugID": 12,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        Object {
                                          "justifyContent": "center",
                                        },
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
                    <Icon
                              allowFontScaling={false}
                              color="blue"
                              name="square-o"
                              size={24}
                    />
          </View>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CheckBox
    center={true}
    checked={false}
    checkedColor="green"
    checkedIcon="check-square-o"
    iconRight={true}
    iconType="font-awesome"
    right={false}
    rigth={true}
    uncheckedColor="blue"
    uncheckedIcon="square-o"
/>,
}
`;

exports[`CheckBox Component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "#fafafa",
              "borderColor": "#ededed",
              "borderRadius": 3,
              "borderWidth": 1,
              "margin": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "padding": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
                false,
              ]
        }
    >
        <Icon
            allowFontScaling={false}
            color="#bfbfbf"
            name="square-o"
            onLongPress={undefined}
            onPress={undefined}
            size={24}
        />
        <TextElement
            style={
                Array [
                    Object {
                      "color": "#43484d",
                      "fontWeight": "bold",
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                    undefined,
                  ]
            }
        />
    </View>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "#fafafa",
                    "borderColor": "#ededed",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "margin": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                    "padding": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        false,
                        false,
                      ]
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="#bfbfbf"
                  name="square-o"
                  onLongPress={undefined}
                  onPress={undefined}
                  size={24}
            />
            <TextElement
                  style={
                        Array [
                              Object {
                                "color": "#43484d",
                                "fontWeight": "bold",
                                "marginLeft": 10,
                                "marginRight": 10,
                              },
                              undefined,
                              undefined,
                            ]
                  }
            />
      </View>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CheckBox
        center={false}
        checked={false}
        checkedColor="green"
        checkedIcon="check-square-o"
        iconRight={false}
        right={false}
        uncheckedColor="#bfbfbf"
        uncheckedIcon="square-o"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "center": false,
          "checked": false,
          "checkedColor": "green",
          "checkedIcon": "check-square-o",
          "iconRight": false,
          "right": false,
          "uncheckedColor": "#bfbfbf",
          "uncheckedIcon": "square-o",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        false,
                                      ]
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#bfbfbf"
                              name="square-o"
                              onLongPress={undefined}
                              onPress={undefined}
                              size={24}
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</TouchableOpacity>,
        "_debugID": 2,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "#fafafa",
                                "borderColor": "#ededed",
                                "borderRadius": 3,
                                "borderWidth": 1,
                                "margin": 5,
                                "marginLeft": 10,
                                "marginRight": 10,
                                "padding": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                        },
                                        false,
                                        false,
                                      ]
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#bfbfbf"
                              name="square-o"
                              onLongPress={undefined}
                              onPress={undefined}
                              size={24}
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "#43484d",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 10,
                                                    "marginRight": 10,
                                                  },
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CheckBox
    center={false}
    checked={false}
    checkedColor="green"
    checkedIcon="check-square-o"
    iconRight={false}
    right={false}
    uncheckedColor="#bfbfbf"
    uncheckedIcon="square-o"
/>,
}
`;
